--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <div class="input_wrapper">
                     <label for="firstName">First name</label>
                     <input type="text" name="firstName" id="firstName" class="input" placeholder="Input first name">
-                    <span class="helper_text FirstName_errortext">Helper text firstName</span>
+                    <span class="helper_text FirstName_errortext">Enter your name</span>
                 </div>
 
                 <div class="input_wrapper">
                     <label for="lastName">Last name</label>
                     <input type="text" name="lastName" id="lastName" class="input" placeholder="Input last name">
-                    <span class="helper_text LastName_errortext">Helper text lastName</span>
+                    <span class="helper_text LastName_errortext">Enter your last name</span>
                 </div>
 
 
