--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
                 <div class="input_wrapper">
                     <label for="firstName">First name</label>
-                    <input type="text" name="firstName" id="firstName" class="input" placeholder="Input first name">
+                    <input autocomplete="off" type="text" name="firstName" id="firstName" class="input" placeholder="Input first name">
                     <span class="helper_text FirstName_errortext">Enter your name</span>
                 </div>
 
                 <div class="input_wrapper">
                     <label for="lastName">Last name</label>
-                    <input type="text" name="lastName" id="lastName" class="input" placeholder="Input last name">
+                    <input autocomplete="off" type="text" name="lastName" id="lastName" class="input" placeholder="Input last name">
                     <span class="helper_text LastName_errortext">Enter your last name</span>
                 </div>
 
@@ -45,7 +45,8 @@
 
     </div>
 
-   <script src="js/main.js"></script>
+   <script type="module" src="js/main.js"></script>
+   <script type="module" src="js/validator.js"></script>
 
 </body>
 
