--- a/index.html
+++ b/index.html
@@ -28,15 +28,26 @@
             <div class="form_message_container">
                 <div class="form_message">
                     <strong style="font-size: 18px; color: green;">Success!</strong><br><br>
-                    <b>Your name:</b><p id="YourNameMessage"> FirstName</p>
+                    <b>Your name:</b>
+                    <p id="YourNameMessage"> FirstName</p>
                     <br>
-                    <b> Last name:</b><p id="LastNameMessage"> LastName</p>
+                    <b> Last name:</b>
+                    <p id="LastNameMessage"> LastName</p>
                 </div>
                 <div class="form_message__btn">
-                    <?xml version="1.0" ?><svg fill="none" height="26" viewBox="0 0 26 26" width="26" xmlns="http://www.w3.org/2000/svg"><path d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z" stroke="#4F4F4F" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/><path d="M9 9.5L16.7 17.3" stroke="#4F4F4F" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/><path d="M16.7 9.5L9 17.3" stroke="#4F4F4F" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/></svg>
+                    <?xml version="1.0" ?><svg fill="none" height="26" viewBox="0 0 26 26" width="26"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M13 25C19.6274 25 25 19.6274 25 13C25 6.37258 19.6274 1 13 1C6.37258 1 1 6.37258 1 13C1 19.6274 6.37258 25 13 25Z"
+                            stroke="#4F4F4F" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" />
+                        <path d="M9 9.5L16.7 17.3" stroke="#4F4F4F" stroke-linecap="round" stroke-miterlimit="10"
+                            stroke-width="2" />
+                        <path d="M16.7 9.5L9 17.3" stroke="#4F4F4F" stroke-linecap="round" stroke-miterlimit="10"
+                            stroke-width="2" />
+                    </svg>
                 </div>
             </div>
-            
+
 
             <div class="input_wrapper">
                 <label for="firstName">First name</label>
@@ -56,14 +67,10 @@
 
         </form>
 
-
-
-
     </div>
 
     <script type="module" src="js/main.js"></script>
     <script type="module" src="js/validator.js"></script>
-    <script src="js/hideSuccessMessage.js"></script>
 
 </body>
 
